[package]
name = "YES-ESP-DX_FT8-Rust-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.44"
futures-util = "0.3.32"
libc = "0.2.182"
num-complex = "0.4.6"
rayon = "1.11.0"
regex = "1.12.3"
rustfft = "6.4.1"
lazy_static = "1.5.0"
itertools = "0.13.0"
socket2 = "0.6.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"